# YHack26

./: .env.example  .gitignore  BACKEND.md  Procfile  README.md  caresight.db  imu_output.json  main.py  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: index.py
backend/: database.py  event_handler.py  main.py
caresight/logic/: __init__.py  api.py  events.py  rules.py
dashboard/: app.py
dashboard/templates/: dashboard.html
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/activity/: activity.module.css  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/dashboard/: dashboard.module.css  page.tsx
frontend/app/manage/: manage.module.css  page.tsx
frontend/components/: CameraCard.module.css  CameraCard.tsx  Navbar.module.css  Navbar.tsx
frontend/lib/: api.ts  transforms.ts  types.ts
hardware/: imu_bridge.py  imu_listener.py  mic_listener.py
integrations/: elevenlabs_call.py  twilio_sms.py  viam_client.py
intervention/: llm.py  speech.py
logic/: __init__.py  api.py  events.py  rules.py  state.py
tests/: test_logic.py
viam_accel/: arduino_accel.py  main.py  run.sh
vision/: camera_stream.py
